@@ -1,3 +1,8 @@
+2004-05-26  Bruno Haible  <bruno@clisp.org>
+
+	* spvw.d (main): Change effect of varobjects_misaligned on heap_limit.
+	* spvw_garcol.d (gar_col_normal): Likewise.
+
 2004-05-20  Bruno Haible  <bruno@clisp.org>
 
 	Increase memory sizes for builds with fixed memory size.
